fixed button spacing issue

--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -1,3 +1,9 @@
 .width {
   width: 18rem;
 }
+
+.movie-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
